@startuml

title 10. Production recipes and production orders

hide circle
skinparam linetype ortho

enum ProductionOrderStatus {
	draft
	planned
	materials_reserved
	in_progress
	completed
	canceled
}

entity ProductionRecipe {
	* id: int
	--
	* name: string(255)
	* isDefault: bool
	* status: ActiveStatusEnum
	* createdAt: DateTimeImmutable
	* updatedAt: DateTimeImmutable
	* store: Store
	* product: Product
}

entity ProductionRecipeItem {
	* id: int
	--
	* quantity: decimal(14,4)
	wastePercent: decimal(5,2)?
	* recipe: ProductionRecipe
	* material: Product
}

entity ProductionOrderMaterial {
	* id: int
	--
	* plannedQuantity: decimal(14,4)
	wastePercent: decimal(5,2)?
	comment: text?
	* productionOrder: ProductionOrder
	* material: Product
	recipeItem: ProductionRecipeItem?
}

entity ProductionOrder {
	* id: int
	--
	* status: ProductionOrderStatus
	* plannedQuantity: decimal(14,4)
	completedQuantity: decimal(14,4)?
	plannedStartAt: DateTimeImmutable?
	plannedEndAt: DateTimeImmutable?
	startedAt: DateTimeImmutable?
	completedAt: DateTimeImmutable?
	canceledAt: DateTimeImmutable?
	comment: text?
	* createdAt: DateTimeImmutable
	* updatedAt: DateTimeImmutable
	* store: Store
	createdBy: User?
	updatedBy: User?
	startedBy: User?
	completedBy: User?
	canceledBy: User?
	* product: Product
	warehouse: Warehouse?
	recipe: ProductionRecipe?
}

Store ||--o{ ProductionRecipe : owns
Store ||--o{ ProductionOrder : owns
Product ||--o{ ProductionRecipe : manufactured by
Product ||--o{ ProductionRecipeItem : used as material
Product ||--o{ ProductionOrder : produced as
Product ||--o{ ProductionOrderMaterial : planned material
ProductionRecipe ||--o{ ProductionRecipeItem : contains materials
ProductionRecipe |o--o{ ProductionOrder : used by
ProductionRecipeItem |o--o{ ProductionOrderMaterial : copied into plan
ProductionOrder ||--o{ ProductionOrderMaterial : plans materials
ProductionOrderStatus ||--o{ ProductionOrder : controls
ProductionOrder ||--o{ InventoryDocument : generates production docs
Warehouse ||--o{ ProductionOrder : receives production
User |o--o{ ProductionOrder : creates/updates/starts/completes/cancels

note right of ProductionRecipe
  Current project status:
  - ProductionRecipe and ProductionRecipeItem are implemented.
  - ProductionOrder and ProductionOrderMaterial are implemented.
  - ProductionOrderFactory creates order material snapshots.
  - ProductionOrderFactory can create a draft production
    InventoryDocument with OUT material lines and IN output line.
  - InventoryDocument can link to ProductionOrder.
  - Admin CRUD exists for recipes.
  - Product already has canBeManufactured and productKind.

  Implemented behavior:
  - Recipe belongs to one produced product and one store.
  - isDefault marks the main recipe for default creation flow.
  - Recipe items are material/component products.
  - wastePercent allows planned overconsumption.
  - Product with productKind=service should not normally be
    material or output unless rules explicitly allow it.
end note

note right of ProductionOrder
  Implemented behavior:
  - Creating from recipe copies material rows into
    ProductionOrderMaterial snapshot.
  - Recipe edits later do not mutate existing production orders.
  - Production document quantities can be scaled for partial
    completed output.
  - Posted production documents recalculate completedQuantity.
  - Actual consumption/output is posted through InventoryDocument.
  - materials_reserved increases WarehouseStock.reservedQuantity
    for planned material quantities.
  - in_progress requires materials_reserved.
  - completing or canceling releases reserved material quantities.
  - Losses and extra consumption are stock documents,
    not direct edits to material rows.
  - Admin CRUD and workflow actions exist for production orders.
end note

note right of ProductionOrderStatus
  Recommended flow:
  draft -> planned -> materials_reserved -> in_progress -> completed.

  canceled is terminal for orders stopped before completion.
end note

note bottom
  Implementation status:

  Done:

  1. Added ProductionRecipe and ProductionRecipeItem entities.
  2. Added ProductionOrder and ProductionOrderMaterial entities.
  3. Added service to create ProductionOrder from recipe snapshot.
  4. Added InventoryDocument.productionOrder link.
  5. Added production document factory for consumption/output lines.
  6. Added tests for recipe copy, waste planning,
     service-product rejection and document line directions.
  7. Added admin CRUD for recipes and production orders.
  8. Added production order workflow transitions and audit fields.
  9. Integrated material reservation through WarehouseStock.reservedQuantity.
  10. Integrated completion with production InventoryDocument posting.

  This stage should be done after inventory and reservations.
end note

@enduml
